Add nbsphinx - Gallery of tutorials - Binder links - nbviewer links

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -3,25 +3,38 @@
   {
    "cell_type": "markdown",
    "id": "acfa7d16-ab79-4ff5-9b94-7b7122d6a179",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# README.ipynb\n",
+    "# Tutorials\n",
     "\n",
     "This directory contains Jupyter Notebooks for tutorials of `scores`.\n",
     "\n",
     "## First Steps\n",
     "\n",
-    "Firstly run [Data Fetching](./First_Data_Fetching.ipynb) to fetch the data needed for some later notebooks\n",
+    "Firstly run [Data Fetching](./First_Data_Fetching.ipynb) to fetch the data needed for some later notebooks\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344d823b",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
     "\n",
     "## Tutorials\n",
     "\n",
     "- [Brier Score](./Brier_Score.ipynb)\n",
     "- [CRPS](./Continuous_Ranked_Probability_Score.ipynb)\n",
     "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
-    "- [FIRM](./Firm.ipynb)\n",
+    "- [FIRM](./FIRM.ipynb)\n",
     "- [Flip Flop](./Flip_Flop_Index.ipynb)\n",
     "- [Isotonic Regression](./Isotonic_Regression.ipynb)\n",
-    "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Absolute_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
+    "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
