--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "57b22edd-ff30-4e05-8b54-9cd6ba52755c",
+   "metadata": {},
+   "source": [
+    "# Flip Flop Index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "91abca47",
