Remove nblink - Cleanup explanation

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -26,21 +26,37 @@
    },
    "source": [
     "\n",
-    "## Tutorials\n",
-    "\n",
-    "- [Brier Score](./Brier_Score.ipynb)\n",
-    "- [CRPS](./Continuous_Ranked_Probability_Score.ipynb)\n",
-    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
-    "- [FIRM](./FIRM.ipynb)\n",
+    "## Continuous\n",
     "- [Flip Flop](./Flip_Flop_Index.ipynb)\n",
     "- [Isotonic Regression](./Isotonic_Regression.ipynb)\n",
     "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
+    "\n",
+    "## Categorical\n",
+    "- [FIRM](./FIRM.ipynb)\n",
+    "\n",
+    "## Probability\n",
+    "\n",
+    "- [Brier Score](./Brier_Score.ipynb)\n",
+    "- [CRPS](./Continuous_Ranked_Probability_Score.ipynb)\n",
     "- [Reciever Operating Characteristic](./ROC.ipynb)\n",
+    "\n",
+    "## Stats\n",
+    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
+    "\n",
+    "## Other\n",
     "- [Weighting Results](./Weighting_Results.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c85799-52b0-41e2-96e3-82baa153f3d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
