--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -9,11 +9,22 @@
    "source": [
     "# Tutorials\n",
     "\n",
-    "This directory contains Jupyter Notebooks for tutorials of `scores`.\n",
+    "Jupyter Notebooks for tutorials of `scores`.\n",
     "\n",
-    "## First Steps\n",
     "\n",
     "Firstly run [Data Fetching](./First_Data_Fetching.ipynb) to fetch the data needed for some later notebooks\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a48b39d6",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
+    "- [Data Fetching](./First_Data_Fetching.ipynb)"
    ]
   },
   {
@@ -32,31 +43,67 @@
     "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
-    "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
+    "- [Quantile Loss](./Quantile_Loss.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066a42ff",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
     "\n",
     "## Categorical\n",
-    "- [FIRM](./FIRM.ipynb)\n",
+    "- [FIRM](./FIRM.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f7af137",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
     "\n",
     "## Probability\n",
     "\n",
     "- [Brier Score](./Brier_Score.ipynb)\n",
     "- [CRPS](./Continuous_Ranked_Probability_Score.ipynb)\n",
-    "- [Reciever Operating Characteristic](./ROC.ipynb)\n",
+    "- [Reciever Operating Characteristic](./ROC.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8765192",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
     "\n",
     "## Stats\n",
-    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n",
+    "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e1ed380",
+   "metadata": {
+    "tags": [
+     "nbsphinx-gallery"
+    ]
+   },
+   "source": [
     "\n",
     "## Other\n",
     "- [Weighting Results](./Weighting_Results.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6c85799-52b0-41e2-96e3-82baa153f3d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
