added bias to docs. skip bias notebook test

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -43,7 +43,8 @@
     "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
-    "- [Quantile Loss](./Quantile_Loss.ipynb)\n"
+    "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
+    "- [Bias](./Bias.ipynb)"
    ]
   },
   {
