update bias implementation and tutorials

--- a/tutorials/Additive_and_multiplicative_bias.ipynb
+++ b/tutorials/Additive_and_multiplicative_bias.ipynb
@@ -15,16 +15,16 @@
     "\n",
     "`Scores` has multiplicative bias and additive bias implementations for use on continuous forecasts.\n",
     "\n",
-    "Additive bias is often called the \"mean error\" and can tell us the average error. It does not tell us the magnitude of the error.\n",
+    "Additive bias is often called the \"mean error\" and can tell us the average error. It does not tell us the magnitude of the error, which means that is is possible for there to be no bias, yet the mean absolute error which does tell you the magnitude of the error is positive.\n",
     "\n",
-    "Multiplicative bias is another option which is often best suited for forecasts and observations that have 0 as an upper or lower bound (e.g., significant wave height, or wind magnitude).\n",
+    "Multiplicative bias is another option which is often best suited for forecasts and observations that have 0 as an upper or lower bound (e.g., significant wave height, or wind magnitude). This could be useful for a forecaster who wants a simple method to bias correct a wind speed forecast.\n",
     "\n",
     "**Note:** In this tutorial we use the forecast and analysis grids that are downloaded or derived in `First_data_Fetching.ipynb`. Please run through this tutorial first to fetch data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcfa69c9150>]"
+       "[<matplotlib.lines.Line2D at 0x7f42924dc690>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,21 +93,21 @@
     "\n",
     "### Multiplicative bias\n",
     "\n",
-    "Let's imagine that our data has a lower bound at zero and we want to calculate the multiplicative bias. We can imagine that this is now wind speed data"
+    "Let's imagine that our data has a lower bound at zero and we want to calculate the multiplicative bias. To avoid download more data, we will convert the temperature data to be degrees Celcius and clip the data to have a minimum value of zero. Readers may wish to explore the data available from the NCI server and download a wind grid instead for this example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcfa6759150>]"
+       "[<matplotlib.lines.Line2D at 0x7f42925573d0>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,14 +513,14 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;multiplicative bias&#x27; ()&gt;\n",
-       "array(inf)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'multiplicative bias'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a41a3a37-f4bb-4d45-9dee-cd93c09a42d0' class='xr-array-in' type='checkbox' checked><label for='section-a41a3a37-f4bb-4d45-9dee-cd93c09a42d0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>inf</span></div><div class='xr-array-data'><pre>array(inf)</pre></div></div></li><li class='xr-section-item'><input id='section-d7c0cceb-a6c0-4296-b35e-40bf96904f05' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d7c0cceb-a6c0-4296-b35e-40bf96904f05' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-7c48c5f1-3936-40da-81a6-9d3b5e11c68e' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-7c48c5f1-3936-40da-81a6-9d3b5e11c68e' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-df5adb7a-b2e7-4425-af49-4695e8c2a7db' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-df5adb7a-b2e7-4425-af49-4695e8c2a7db' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "array(inf)</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'multiplicative bias'</div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-91a733ea-e1a8-4709-9eef-af2d20ef0a83' class='xr-array-in' type='checkbox' checked><label for='section-91a733ea-e1a8-4709-9eef-af2d20ef0a83' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>inf</span></div><div class='xr-array-data'><pre>array(inf)</pre></div></div></li><li class='xr-section-item'><input id='section-23ae31bc-8738-48c5-990b-17917f4b85be' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-23ae31bc-8738-48c5-990b-17917f4b85be' class='xr-section-summary'  title='Expand/collapse section'>Coordinates: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-bcdf7503-dd8f-4504-bbc9-8ae7cdbac9ba' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-bcdf7503-dd8f-4504-bbc9-8ae7cdbac9ba' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-ccffe95d-60a8-4735-b528-3469ebb2b6b0' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-ccffe95d-60a8-4735-b528-3469ebb2b6b0' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'multiplicative bias' ()>\n",
        "array(inf)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -903,8 +903,8 @@
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;multiplicative bias&#x27; (lat: 1536)&gt;\n",
        "array([nan, nan, nan, ..., nan, nan, nan], dtype=float32)\n",
        "Coordinates:\n",
-       "  * lat      (lat) float64 89.94 89.82 89.71 89.59 ... -89.71 -89.82 -89.94</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'multiplicative bias'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 1536</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2d9cf721-6848-4c62-ac21-bd95cf97b3ca' class='xr-array-in' type='checkbox' checked><label for='section-2d9cf721-6848-4c62-ac21-bd95cf97b3ca' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([nan, nan, nan, ..., nan, nan, nan], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-27e4c2b8-6ec1-4b60-9095-e74ed64979a3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-27e4c2b8-6ec1-4b60-9095-e74ed64979a3' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.94 89.82 89.71 ... -89.82 -89.94</div><input id='attrs-42c54ce8-654e-4c83-a8a3-535960c26f36' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-42c54ce8-654e-4c83-a8a3-535960c26f36' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-661db156-8ca1-47d8-8910-d631c0300004' class='xr-var-data-in' type='checkbox'><label for='data-661db156-8ca1-47d8-8910-d631c0300004' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div><div class='xr-var-data'><pre>array([ 89.941406,  89.824219,  89.707031, ..., -89.707031, -89.824219,\n",
-       "       -89.941406])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-18d7a42b-2050-43c5-9d36-65c5bbb4fd9e' class='xr-section-summary-in' type='checkbox'  ><label for='section-18d7a42b-2050-43c5-9d36-65c5bbb4fd9e' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>lat</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-db02de72-f266-4108-a074-1dbd971bc19d' class='xr-index-data-in' type='checkbox'/><label for='index-db02de72-f266-4108-a074-1dbd971bc19d' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([         89.941406,  89.82421850032573,  89.70703100065145,\n",
+       "  * lat      (lat) float64 89.94 89.82 89.71 89.59 ... -89.71 -89.82 -89.94</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'multiplicative bias'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>lat</span>: 1536</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-ee1bcf29-4b70-482b-8b81-2531b0db860a' class='xr-array-in' type='checkbox' checked><label for='section-ee1bcf29-4b70-482b-8b81-2531b0db860a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([nan, nan, nan, ..., nan, nan, nan], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-a83c3a52-d2d2-48c9-bcce-48cc73da9ca9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-a83c3a52-d2d2-48c9-bcce-48cc73da9ca9' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>lat</span></div><div class='xr-var-dims'>(lat)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.94 89.82 89.71 ... -89.82 -89.94</div><input id='attrs-114b4bbe-5255-4bff-bc82-1c1dfaf0cff5' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-114b4bbe-5255-4bff-bc82-1c1dfaf0cff5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-aa21eed1-b7b0-4f8f-b157-4c4ccf566bd5' class='xr-var-data-in' type='checkbox'><label for='data-aa21eed1-b7b0-4f8f-b157-4c4ccf566bd5' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>latitudes</dd><dt><span>type :</span></dt><dd>uniform</dd><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>valid_min :</span></dt><dd>-90.0</dd><dt><span>valid_max :</span></dt><dd>90.0</dd><dt><span>axis :</span></dt><dd>Y</dd></dl></div><div class='xr-var-data'><pre>array([ 89.941406,  89.824219,  89.707031, ..., -89.707031, -89.824219,\n",
+       "       -89.941406])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-6d08aeab-3d2e-4f51-b7a4-5aa1fee8af54' class='xr-section-summary-in' type='checkbox'  ><label for='section-6d08aeab-3d2e-4f51-b7a4-5aa1fee8af54' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>lat</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-86bbee94-e1e5-43e2-9937-198637a77553' class='xr-index-data-in' type='checkbox'/><label for='index-86bbee94-e1e5-43e2-9937-198637a77553' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([         89.941406,  89.82421850032573,  89.70703100065145,\n",
        "               89.58984350097718,  89.47265600130291,  89.35546850162864,\n",
        "               89.23828100195436,  89.12109350228009,  89.00390600260582,\n",
        "               88.88671850293154,\n",
@@ -913,7 +913,7 @@
        "              -89.23828100196343, -89.35546850163769, -89.47265600131195,\n",
        "              -89.58984350098623, -89.70703100066052, -89.82421850033478,\n",
        "              -89.94140600000904],\n",
-       "             dtype=&#x27;float64&#x27;, name=&#x27;lat&#x27;, length=1536))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-691b1dc2-2d14-4d10-9211-f8a526bcdd60' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-691b1dc2-2d14-4d10-9211-f8a526bcdd60' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "             dtype=&#x27;float64&#x27;, name=&#x27;lat&#x27;, length=1536))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ffc34533-dbd0-4e7c-a59f-2aea391c2058' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-ffc34533-dbd0-4e7c-a59f-2aea391c2058' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'multiplicative bias' (lat: 1536)>\n",
@@ -922,7 +922,7 @@
        "  * lat      (lat) float64 89.94 89.82 89.71 89.59 ... -89.71 -89.82 -89.94"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
