notebooks: fix keyword-only args

--- a/tutorials/Murphy_Diagrams.ipynb
+++ b/tutorials/Murphy_Diagrams.ipynb
@@ -1182,8 +1182,8 @@
     "thetas = murphy_thetas([fcst1, fcst2], obs, \"expectile\")\n",
     "\n",
     "# Calculate the average elementary score for the mean (0.5 expectile) for each threshold theta\n",
-    "ms1 = murphy_score(fcst1, obs, thetas, \"expectile\", 0.5)\n",
-    "ms2 = murphy_score(fcst2, obs, thetas, \"expectile\", 0.5)\n",
+    "ms1 = murphy_score(fcst1, obs, thetas, functional=\"expectile\", alpha=0.5)\n",
+    "ms2 = murphy_score(fcst2, obs, thetas, functional=\"expectile\", alpha=0.5)\n",
     "\n",
     "# Rename date variable for plotting\n",
     "ms1 = ms1.rename({\"total\": \"Mean elementary score\"})\n",
