fix: file download: stream content to disk rather than loading to memory before saving.

--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -62,21 +62,32 @@
    "source": [
     "# This is a basic file fetch only. Do not rely on it for untrusted data. A basic check has been included to make sure the\n",
     "# downloaded file matches what was expected.\n",
-    "\n",
+    "%pip install tqdm  # file download progress bar - note that this will install this package in your kernel env.\n",
     "def basic_fetch(url, filename, expected_hash):\n",
     "    if os.path.exists(filename):\n",
     "        print(\"File already exists, skipping download\")\n",
     "    else:\n",
-    "        response = requests.get(url, allow_redirects=True)\n",
-    "        if response.ok:\n",
-    "            outfile = open(filename, 'wb')  # This will write the file out to the current directory, typically where this notebook is being run\n",
-    "            outfile.write(response.content)        \n",
-    "            \n",
-    "    content = open(filename, 'rb').read()\n",
-    "    found_hash = hashlib.sha256(content).hexdigest()\n",
-    "    if found_hash != expected_hash:\n",
-    "        os.remove(filename)\n",
-    "        print(\"File has unexpected contents. The file has been removed - please download manually and check the data carefully\")\n",
+    "        digest = hashlib.sha256()\n",
+    "        with requests.get(url, stream=True) as r:\n",
+    "            r.raise_for_status()\n",
+    "            # intentional scoped lazy import\n",
+    "            from tqdm import tqdm\n",
+    "            total_size = int(r.headers.get(\"content-length\", 0))\n",
+    "            with tqdm(total=total_size, unit=\"B\", unit_scale=True) as progress_bar:\n",
+    "                # modify chunk_size if streaming seems to be slow\n",
+    "                chunk_size = 1024\n",
+    "                with open(filename, 'wb') as f:\n",
+    "                    for chunk in r.iter_content(chunk_size):\n",
+    "                        f.write(chunk)\n",
+    "                        digest.update(chunk)\n",
+    "                        progress_bar.update(len(chunk))\n",
+    "                    \n",
+    "        # check sha256 hash\n",
+    "        found_hash = digest.hexdigest()\n",
+    "        print(f\"Hash validation: \\n-> expected | {expected_hash}\\n-> found    | {found_hash}\") \n",
+    "        if found_hash != expected_hash:\n",
+    "            os.remove(filename)\n",
+    "            print(\"File has unexpected contents. The file has been removed - please download manually and check the data carefully\")\n",
     "    "
    ]
   },
