--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -62,25 +62,38 @@
    "source": [
     "# This is a basic file fetch only. Do not rely on it for untrusted data. A basic check has been included to make sure the\n",
     "# downloaded file matches what was expected.\n",
-    "%pip install tqdm  # file download progress bar - note that this will install this package in your kernel env.\n",
-    "def basic_fetch(url, filename, expected_hash):\n",
+    "\n",
+    "# tweak chunk_size if fetch is taking time\n",
+    "def basic_fetch(url, filename, expected_hash, *, chunk_size=1024, show_progress=True):\n",
     "    if os.path.exists(filename):\n",
     "        print(\"File already exists, skipping download\")\n",
     "    else:\n",
+    "        # in-place of tqdm to avoid package bloat\n",
+    "        if show_progress:\n",
+    "            def update_progress(progress, total):\n",
+    "                progress_pct = min(100, (progress/total) * 100)\n",
+    "                total_bars = 50\n",
+    "                bars = int((progress_pct/100) * total_bars)\n",
+    "                newline = \"\\n\" if progress_pct == 100 else \"\\r\"\n",
+    "                delim = '-' if (progress_pct - int(progress_pct)) > 0.5 else '='\n",
+    "                print(\n",
+    "                    f\"[{'='*bars+delim+' '*(total_bars-bars)}] {int(progress_pct)}% | {progress} / {total} bytes          \",\n",
+    "                    end=newline,\n",
+    "                )\n",
+    "            \n",
     "        digest = hashlib.sha256()\n",
     "        with requests.get(url, stream=True) as r:\n",
     "            r.raise_for_status()\n",
-    "            # intentional scoped lazy import\n",
-    "            from tqdm import tqdm\n",
     "            total_size = int(r.headers.get(\"content-length\", 0))\n",
-    "            with tqdm(total=total_size, unit=\"B\", unit_scale=True) as progress_bar:\n",
-    "                # modify chunk_size if streaming seems to be slow\n",
-    "                chunk_size = 1024\n",
-    "                with open(filename, 'wb') as f:\n",
-    "                    for chunk in r.iter_content(chunk_size):\n",
-    "                        f.write(chunk)\n",
-    "                        digest.update(chunk)\n",
-    "                        progress_bar.update(len(chunk))\n",
+    "            downloaded = 0\n",
+    "            with open(filename, 'wb') as f:\n",
+    "                for chunk in r.iter_content(chunk_size):\n",
+    "                    f.write(chunk)\n",
+    "                    # update digest on the fly\n",
+    "                    digest.update(chunk)\n",
+    "                    downloaded += len(chunk)\n",
+    "                    if show_progress:\n",
+    "                        update_progress(downloaded, total_size)\n",
     "                    \n",
     "        # check sha256 hash\n",
     "        found_hash = digest.hexdigest()\n",
