added tutorial for angular data

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -103,7 +103,8 @@
    "source": [
     "\n",
     "## Other\n",
-    "- [Weighting Results](./Weighting_Results.ipynb)"
+    "- [Weighting Results](./Weighting_Results.ipynb)\n",
+    "- [Angular data](.Angular_data.ipynb)"
    ]
   }
  ],
