--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -3351,7 +3351,7 @@
     "\n",
     "Try on some real data of interest.\n",
     "\n",
-    "Try on some forecasts of direction using the flag `is_angular`\n",
+    "Try on some forecasts of direction using the argument `angular=True`\n",
     "\n",
     "For `flip_flop_index_proportion_exceeding` try the `reduce_dims` or `preserve_dims` to report data conditioned by something of interest. For example, if your data includes `season` or `forecast zone` you can report exceedence values for those.\n",
     "\n",
