--- a/tutorials/Continuous_Ranked_Probability_Score.ipynb
+++ b/tutorials/Continuous_Ranked_Probability_Score.ipynb
@@ -44,7 +44,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import numpy\n",
-    "import pandas\n",
     "import scipy\n",
     "import xarray"
    ]
@@ -85,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "fcst_thresholds = numpy.linspace(-2, 8, 100)  # Let's consider a range of forecast values between 1 and 10 degrees"
+    "fcst_thresholds = numpy.linspace(-2, 8, 100)  # Let's consider a range of forecast values between -2 and 8 degrees"
    ]
   },
   {
@@ -221,7 +220,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f82b43b4b10>"
+       "<matplotlib.legend.Legend at 0x7fd82c110e50>"
       ]
      },
      "execution_count": 7,
@@ -328,7 +327,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f82843fa190>"
+       "<matplotlib.legend.Legend at 0x7fd7f69f7950>"
       ]
      },
      "execution_count": 11,
