changed angular to is_angular

--- a/tutorials/Angular_data.ipynb
+++ b/tutorials/Angular_data.ipynb
@@ -7,7 +7,7 @@
     "# Angular data\n",
     "Sometimes we are interested in evaluating angular forecasts, such as a wind direction forecast against wind direction observations. \n",
     "\n",
-    "Several metrics in `scores` can be used to evaluate angular forecasts expressed in degrees. If the `angular` argument is available in a metric, then that function can be used with angular data and it will handle the discontinuity that occurs between 360 degrees and 0. Simply set `angular=True`. It does this by calculating the length of the smaller of the two explementary angles between the two sources of data (e.g., forecast and observed).\n",
+    "Several metrics in `scores` can be used to evaluate angular forecasts expressed in degrees. If the `is_angular` argument is available in a metric, then that function can be used with angular data and it will handle the discontinuity that occurs between 360 degrees and 0. Simply set `is_angular=True`. It does this by calculating the length of the smaller of the two explementary angles between the two sources of data (e.g., forecast and observed).\n",
     "\n",
     "If your data is in radians, you can convert it to degrees my multiplying your data by 180/pi (you can use `numpy.pi`)."
    ]
@@ -436,14 +436,14 @@
     }
    ],
    "source": [
-    "mae(fcst, obs, angular=True)"
+    "mae(fcst, obs, is_angular=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the forecast and observed values are random taken from a uniform distribution on the interval [0, 360), we would expect the MAE to be around 90. Let's see what happens when we don't use the `angular=True`."
+    "Since the forecast and observed values are random taken from a uniform distribution on the interval [0, 360), we would expect the MAE to be around 90. Let's see what happens when we don't use the `is_angular=True`."
    ]
   },
   {
