Rename tutorial notebook Add to explanation notebook

--- a/tutorials/Contingency_Scores.ipynb
+++ b/tutorials/Contingency_Scores.ipynb
@@ -16,7 +16,7 @@
    "id": "a2e5214b-fb6a-4e04-b208-0857e98d1beb",
    "metadata": {},
    "source": [
-    "# Overview of Contingency Scores\n",
+    "## Overview of Contingency Scores\n",
     "\n",
     "Many people will be familiar with the following terms: true positives, false negatives, true positive rate. These terms and many more all apply to a contingency table. Producing these scores is inherently a three-step process.\n",
     "\n",
@@ -1816,7 +1816,7 @@
    "id": "f5c6e068-d671-486b-b383-e2e2fe2bcf8e",
    "metadata": {},
    "source": [
-    "# More Complex Use Cases\n",
+    "## Tranforming and Computing Large Tables \n",
     "\n",
     "There are two kinds of complexity to explore. The first relates to handling very large data sets. Dimensionality can be explored using the \"transform\" operation on the contingency table. This will trigger the 'compute' function against the dask arrays which until this point may have been loaded lazily. As such, it may be an expensive operation, but the resultant table is very small and all the relevant scores can be easily calculated at the table re-used."
    ]
@@ -2216,6 +2216,8 @@
    "id": "4a031199-cbc6-44fc-a906-dde83c0beca6",
    "metadata": {},
    "source": [
+    "## Exploring Dimensionality\n",
+    "\n",
     "The transform function is also utilised to explore the dimensionality of the data. This function accepts preserve_dims and reduce_dims as per the rest of the scores codebase. The intention is to support weights during transformation in the future, but the semantics of using weights in a binary context is unclear, so more time is needed to explore implementation options. For now, this approach is used to examine contingency scores along the data dimensions."
    ]
   },
