--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -57,7 +57,8 @@
    "source": [
     "\n",
     "## Categorical\n",
-    "- [FIRM](./FIRM.ipynb)\n"
+    "- [FIRM](./FIRM.ipynb)\n",
+    "- [Contingency Scores](./Contingency_Scores.ipynb)\n"
    ]
   },
   {
