fix: remove progress bar as its slowing down IO

--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -64,36 +64,23 @@
     "# downloaded file matches what was expected.\n",
     "\n",
     "# tweak chunk_size if fetch is taking time\n",
-    "def basic_fetch(url, filename, expected_hash, *, chunk_size=1024, show_progress=True):\n",
+    "def basic_fetch(url, filename, expected_hash, *, chunk_size=8192):\n",
     "    if os.path.exists(filename):\n",
     "        print(\"File already exists, skipping download\")\n",
-    "    else:\n",
-    "        # in-place of tqdm to avoid package bloat\n",
-    "        if show_progress:\n",
-    "            def update_progress(progress, total):\n",
-    "                progress_pct = min(100, (progress/total) * 100)\n",
-    "                total_bars = 50\n",
-    "                bars = int((progress_pct/100) * total_bars)\n",
-    "                newline = \"\\n\" if progress_pct == 100 else \"\\r\"\n",
-    "                delim = '-' if (progress_pct - int(progress_pct)) > 0.5 else '='\n",
-    "                print(\n",
-    "                    f\"[{'='*bars+delim+' '*(total_bars-bars)}] {int(progress_pct)}% | {progress} / {total} bytes          \",\n",
-    "                    end=newline,\n",
-    "                )\n",
-    "            \n",
+    "    else:    \n",
     "        digest = hashlib.sha256()\n",
     "        with requests.get(url, stream=True) as r:\n",
     "            r.raise_for_status()\n",
     "            total_size = int(r.headers.get(\"content-length\", 0))\n",
     "            downloaded = 0\n",
+    "            print(f\"downloading {url} -> {filename}\\n(size={total_size} bytes), please wait a moment...\")\n",
     "            with open(filename, 'wb') as f:\n",
     "                for chunk in r.iter_content(chunk_size):\n",
     "                    f.write(chunk)\n",
     "                    # update digest on the fly\n",
     "                    digest.update(chunk)\n",
     "                    downloaded += len(chunk)\n",
-    "                    if show_progress:\n",
-    "                        update_progress(downloaded, total_size)\n",
+    "        print(\"Download complete, checking digest...\")\n",
     "                    \n",
     "        # check sha256 hash\n",
     "        found_hash = digest.hexdigest()\n",
@@ -101,7 +88,7 @@
     "        if found_hash != expected_hash:\n",
     "            os.remove(filename)\n",
     "            print(\"File has unexpected contents. The file has been removed - please download manually and check the data carefully\")\n",
-    "    "
+    "        print(\"Done.\")"
    ]
   },
   {
