added new CRPS tutorial

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -74,7 +74,8 @@
     "## Probability\n",
     "\n",
     "- [Brier Score](./Brier_Score.ipynb)\n",
-    "- [CRPS](./Continuous_Ranked_Probability_Score.ipynb)\n",
+    "- [CRPS Part 1, for forecasts expressed as chance of not exceeding](./Continuous_Ranked_Probability_Score.ipynb)\n",
+    "- [CRPS Part 2, for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
     "- [Reciever Operating Characteristic](./ROC.ipynb)\n"
    ]
   },
