--- a/tutorials/Contingency_Scores.ipynb
+++ b/tutorials/Contingency_Scores.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "## Making Contingency Tables\n",
     "\n",
-    "Once the event tables have been made, the next step is to make the contingency manager object. It possible to make the contingency manager from the event operator directly, but we will show it first as separate steps, and then show how to do the two things at once. The contingency manager stores the forecast event table, the observed event table and the contingency table itself, plus provides functions for aggregating the data along various dimensions, and calculating metrics from that information."
+    "Once the event tables have been made, the next step is to make the contingency manager object. It possible to make the contingency manager from the event operator directly, but we will show it first as separate steps, and then show how to do the two things at once. The contingency manager stores the binary forecast event data, the binary observed event data and the contingency table itself, plus provides functions for aggregating the data along various dimensions, and calculating metrics from that information."
    ]
   },
   {
